# ZbayLite

./: .gitignore  .testcafe-electron-rc.js  CHANGELOG.md  README.md  package-lock.json  package.json  pubkey.pem  tsconfig.build.main.json  tsconfig.json
.github/workflows/: build.yml  buildMac.yml  buildWin.yml  e2eTest.yml  sentryBuild.yml  sentryBuildMac.yml  sentryBuildWin.yml
.storybook/: main.js
e2eTests/: README.md  newUser.e2e.js  newUser.e2e.ts  sometest.e2e.js
files/: pkcs10.csr  root_ca.pem  root_key.pem  user_cert.pem  user_key.pem
native/: Cargo.toml
scripts/: readFromFiles.ts  setEnvs.js
src/: test.test.ts  testRunner.ts
src/main/: main.js  main.ts  tlgManager.ts  waggleFork.ts  waggleManager.ts
src/main/cli/: RPC.js  client.js  client.ts
src/main/websockets/: client.js  server.js
src/pkijs/: readFromFiles.ts
src/renderer/: DevTools.tsx  Root.js  Root.tsx  config.ts  expanded-theme.ts  index.js  index.tsx  notifications.js  notifications.ts
src/renderer/containers/: hooks.ts
src/renderer/cryptography/: cryptography.ts
src/renderer/forms/: fieldsErrors.ts
src/renderer/pkijs/: common.js  config.js  generateCertificate.test.js  generateCertificate.test.ts  generateRootCA.js  index.test.ts  index.ts  (+5 more)
src/shared/: setupTests.js  setupTests.ts  static.d.ts  static.js  static.types.ts
src/spectron/: basic.test.tsx
testcafe/: sometest.e2e.js
tlgManager/: index.ts
tor/: index.js  index.ts  torrc
webpack/: webpack.config.main.prod.js  webpack.config.renderer.dev.js  webpack.config.renderer.prod.js
worker/: RPC.js  cli.worker.js
(+557 files in other folders)
