[package]
name = "zecwalletnative"
version = "0.1.0"
edition = "2018"
authors = ["Zecwallet"]
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
name = "zecwalletnative"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
zecwalletlitelib = { git = "https://github.com/ZbayApp/zecwallet-light-cli", rev = "0d9296cf3759acd1fc59ad587b845e7c5f4f9c1c" }
neon = "0.3.3"
lazy_static = "1.4.0"
neon-serde = "0.2.0"
serde = "1.0.80"
