[package]
name = "zecwalletnative"
version = "0.1.0"
edition = "2018"
authors = ["Zecwallet"]
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
name = "zecwalletnative"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
zecwalletlitelib = { git = "https://github.com/adityapk00/zecwallet-light-cli", rev = "11e0ea2034faa5a5fa8018629ab25d2f021146c4" }
neon = "0.3.3"
lazy_static = "1.4.0"
neon-serde = "0.2.0"
serde = "1.0.80"
funty = "=1.1.0"